# Atom2Universe

./: .gitignore  AGENTS.md  Atom2Universe-typo-followup.txt  Familles.txt  GAMES_NEUTRINOS.md  Lisez-moi.md  MyLocalServ.cmd  MyLocalServ.js  Pixelart.editor.Plan.txt  README.md  ReadMe.md  build.gradle.kts  gradle.properties  index.html  local.properties  midi.html  settings.gradle.kts
.claude/: settings.local.json
Elements-txt/: Actinium.txt  Aluminium.txt  Americium.txt  Antimoine.txt  Argent.txt  Argon.txt  Arsenic.txt  Astate.txt  Azote.txt  Baryum.txt  Berkelium.txt  Beryllium.txt  Bismuth.txt  Bohrium.txt  Bore.txt  Brome.txt  Cadmium.txt  Calcium.txt  Californium.txt  Carbone.txt  Chlore.txt  Chrome.txt  Cobalt.txt  Copernicium.txt  Cuivre.txt  Curium.txt  Cérium.txt  Césium.txt  Damstardtium.txt  Dubnium.txt  Dysprosium.txt  Einsteinium.txt  Erbium.txt  Etain.txt  Europium.txt  Fer.txt  Fermium.txt  Flerovium.txt  Fluor.txt  Francium.txt  (+78 more)
app/: build.gradle.kts  lint.xml  proguard-rules.pro
app/src/main/cpp/: CMakeLists.txt  fluidsynth_jni.cpp
app/src/main/cpp/include/: fluidsynth.h
config/: config.js
docs/: PRIVACY_POLICY.md  TERMS_OF_SERVICE.md  TODO_SF2_IMPROVEMENTS.txt  TRADEMARK.md  ajout-pages.md  app_modularization_plan.md  arcade-autosave-audit.md  arcade-config-migration.md  arcade-touch-migration.md  chess_ai_tests.md  chess_roadmap.md  chiptune-roadmap.md  index.html  midi-preview-debug-plan.md  performance-optimizations.md  periodic-content-guide.md
fonts/: README.md
gradle/: libs.versions.toml
jaudiotagger/: build.gradle
(+3320 files in other folders)
